video: mdss: LiveDisplay driver
 * Bring in a lightweight version of the LiveDisplay driver which
   works for this chipset, and remove all the OEM spaghetti code.
 * This version of the driver does not include the generic
   RGB offset postprocessing, since we're going to do this using
   the official QDCM APIs.

Change-Id: Ifcaaf93d56933d019d1f469fd70b8466cd4ad3e7

--- a/drivers/video/fbdev/msm/Makefile
+++ b/drivers/video/fbdev/msm/Makefile
@@ -69,3 +69,5 @@ obj-$(CONFIG_COMPAT) += mdss_compat_utils.o
 # TODO: remove me b/62057517
 subdir-ccflags-y += \
 	-Wno-header-guard
+
+obj-$(CONFIG_FB_MSM_MDSS) += mdss_livedisplay.o
