--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -121,3 +121,9 @@ CFLAGS_rpm_master_stat.o += -DCONFIG_DEBUG_FS
 CFLAGS_rpm_rail_stats.o += -DCONFIG_DEBUG_FS
 CFLAGS_system_stats.o += -DCONFIG_DEBUG_FS
 endif
+obj-$(CONFIG_STATE_NOTIFIER) += state_notifier.o
+
+# TODO: remove me b/62058353
+subdir-ccflags-y += \
+	-Wno-ignored-attributes \
+	-Wno-gcc-compat
