--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -124,7 +124,6 @@ CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_NONE is not set
 # CONFIG_RCU_NOCB_CPU_ZERO is not set
 CONFIG_RCU_NOCB_CPU_ALL=y
-# CONFIG_RCU_EXPEDITE_BOOT is not set
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -328,11 +327,11 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_ANXIETY=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
-CONFIG_DEFAULT_ANXIETY=y
+CONFIG_DEFAULT_BFQ=y
+# CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_MAPLE is not set
-CONFIG_DEFAULT_IOSCHED="anxiety"
+CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -756,6 +755,7 @@ CONFIG_TCP_CONG_DCTCP=y
 CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_AGILESD=y
 CONFIG_TCP_CONG_CHINA=y
+CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
@@ -767,6 +767,7 @@ CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_AGILESD is not set
 # CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_CHINA is not set
+# CONFIG_DEFAULT_BBR is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
@@ -4472,6 +4473,7 @@ CONFIG_MSM_TZ_LOG=y
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
 CONFIG_LEGACY_ENERGY_MODEL_DT=y
+# CONFIG_LEGACY_EM_FREQ_TUPLE is not set
 
 #
 # Firmware Drivers
