--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -602,7 +602,9 @@ CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
 CONFIG_GPIO_USB_DETECT=y
+# CONFIG_MSM_MHI is not set
 # CONFIG_MSM_11AD is not set
+# CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 CONFIG_MACH_XIAOMI_WHYRED=y
 CONFIG_QCOM_CLK_SMD_RPM=y
