arm64/configs: configure DEVFREQ_DEFAULT_POLLING_IDLE_MS
* This setting controls the idle polling interval

Signed-off-by: itsmeley <itsmeley@nndrive.my.id>

--- a/arch/arm64/configs/jason_defconfig
+++ b/arch/arm64/configs/jason_defconfig
@@ -661,6 +661,7 @@ CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
 CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_DEVFREQ_DEFAULT_POLLING_IDLE_MS=500
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
