whyred_defconfig: Enable China & Agilesed TCP
Signed-off-by: Reinazhard <muh.alfarozy@gmail.com>

--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -74,6 +74,7 @@ CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
+CONFIG_ARCH_CLOCKSOURCE_DATA=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
 CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_ARCH_HAS_TICK_BROADCAST=y
@@ -737,6 +738,8 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_DCTCP=y
 CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_AGILESD=y
+CONFIG_TCP_CONG_CHINA=y
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
@@ -746,6 +749,7 @@ CONFIG_TCP_CONG_CDG=y
 CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_DCTCP is not set
 # CONFIG_DEFAULT_CDG is not set
+# CONFIG_DEFAULT_CHINA is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
