--- a/arch/arm/boot/dts/qcom/sdm636.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm636.dtsi
@@ -10,7 +10,7 @@
  * GNU General Public License for more details.
  */
 
-#include "sdm660.dtsi"
+#include "sdm660_whyded.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. SDM 636";
