--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -322,9 +322,10 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_IOSCHED_BFQ is not set
+CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
@@ -3087,6 +3088,7 @@ CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_SND_SOC_MAX98937 is not set
 CONFIG_SND_SOC_SDM660_CDC=y
 CONFIG_SND_SOC_TAS2557=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_TAS2557_REGMAP=y
 CONFIG_TAS2557_CODEC=y
 CONFIG_TAS2557_MISC=y
