--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -72,7 +72,6 @@ CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_MSI_IRQ=y
 CONFIG_GENERIC_MSI_IRQ_DOMAIN=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
-# CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
@@ -277,7 +276,6 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 #
 # GCOV-based kernel profiling
 #
-# CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
@@ -320,7 +318,6 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
@@ -525,7 +522,6 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
-# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -1023,7 +1019,6 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1150,7 +1145,6 @@ CONFIG_BT_BREDR=y
 # CONFIG_BT_HIDP is not set
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
-CONFIG_BT_DEBUGFS=y
 
 #
 # Bluetooth device drivers
@@ -1181,7 +1175,6 @@ CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 # CONFIG_CFG80211_REG_RELAX_NO_IR is not set
 CONFIG_CFG80211_DEFAULT_PS=y
-# CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_CFG80211_WEXT is not set
@@ -1238,7 +1231,6 @@ CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_SWR=y
-# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -1284,7 +1276,6 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_WRITEBACK is not set
-# CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
@@ -1826,7 +1817,6 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_FORCE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_FORCE is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_FORCE is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_FORCE is not set
-# CONFIG_TOUCH_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_NT36xxx=y
 # CONFIG_TOUCHSCREEN_FTS is not set
 CONFIG_TOUCHSCREEN_NVT_E7S=y
@@ -2207,7 +2197,6 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_GRGPIO is not set
 # CONFIG_GPIO_PL061 is not set
 CONFIG_GPIO_QPNP_PIN=y
-# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_VX855 is not set
 # CONFIG_GPIO_XGENE is not set
@@ -3410,7 +3399,6 @@ CONFIG_MSM_QUSB_PHY=y
 CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
-# CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 
@@ -3935,7 +3923,6 @@ CONFIG_RMNET_IPA=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
-# CONFIG_IPA_UT is not set
 CONFIG_GPIO_USB_DETECT=y
 # CONFIG_MSM_MHI is not set
 # CONFIG_MSM_11AD is not set
@@ -4077,7 +4064,6 @@ CONFIG_MSM_SPSS_UTILS=y
 # CONFIG_MSM_SMEM_LOGGING is not set
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_QMI_INTERFACE=y
-# CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 # CONFIG_QCOM_GSBI is not set
@@ -4096,7 +4082,6 @@ CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
 # CONFIG_QCOM_EARLY_DOMAIN is not set
 # CONFIG_QCOM_SCM_XPU is not set
-# CONFIG_QCOM_SCM_ERRATA is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_IRQ_HELPER=y
 # CONFIG_QCOM_MEMORY_DUMP is not set
@@ -4135,11 +4120,8 @@ CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
 # CONFIG_MSM_KERNEL_PROTECT is not set
-CONFIG_QCOM_REMOTEQDSS=y
 CONFIG_MSM_SERVICE_NOTIFIER=y
 # CONFIG_MSM_QBT1000 is not set
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
-# CONFIG_MSM_RPM_LOG is not set
 CONFIG_MSM_RPM_STATS_LOG=y
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_WCD_DSP_GLINK=y
@@ -4668,7 +4650,6 @@ CONFIG_NLS_UTF8=y
 #
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
-# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
@@ -4678,12 +4659,12 @@ CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
-CONFIG_FRAME_POINTER=y
+# CONFIG_FRAME_POINTER is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 # CONFIG_DEBUG_KERNEL is not set
@@ -4739,7 +4720,6 @@ CONFIG_TRACING_SUPPORT=y
 #
 # Runtime Testing
 #
-# CONFIG_LKDTM is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
