--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -322,13 +322,17 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_ANXIETY=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
+CONFIG_DEFAULT_ANXIETY=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_MAPLE is not set
+CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -752,6 +756,7 @@ CONFIG_TCP_CONG_CHINA=y
 # CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_DCTCP is not set
+# CONFIG_DEFAULT_AGILESD is not set
 # CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_CHINA is not set
 # CONFIG_DEFAULT_RENO is not set
@@ -4434,7 +4439,6 @@ CONFIG_ARM_PMU=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
 # CONFIG_NVMEM is not set
 # CONFIG_STM is not set
@@ -4715,7 +4719,6 @@ CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
 # CONFIG_IPC_LOGGING is not set
-# CONFIG_QCOM_RTB is not set
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
 
