--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -643,19 +643,25 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALESSA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDHORIZON=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PWRUTILX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_ALESSA=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 CONFIG_CPU_UNDERCLOCK_FREQ_HP=1113600
 CONFIG_CPU_UNDERCLOCK_FREQ_LP=633600
 CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
@@ -666,6 +672,8 @@ CONFIG_INPUT_BOOST_FREQ_LP=633600
 CONFIG_INPUT_BOOST_FREQ_PERF=1113600
 CONFIG_MAX_BOOST_FREQ_LP=1612800
 CONFIG_MAX_BOOST_FREQ_PERF=1804800
+CONFIG_CPU_FREQ_GOV_SCHEDALUCARD=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
@@ -4153,6 +4161,7 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_GPUBW_MON=y
 # CONFIG_ARMBW_HWMON is not set
