whyred_defconfig: Enable STATE_NOTIFIER
Signed-off-by: Reinazhard <muh.alfarozy@gmail.com>

--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -322,7 +322,6 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_ANXIETY=y
@@ -331,7 +330,6 @@ CONFIG_IOSCHED_ANXIETY=y
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_ANXIETY=y
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
@@ -4147,6 +4145,7 @@ CONFIG_QCOM_CX_IPEAK=y
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_CE is not set
 # CONFIG_MSM_CACHE_M4M_ERP64_PANIC_ON_UE is not set
 # CONFIG_MFSE_QMI is not set
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
@@ -4448,6 +4447,7 @@ CONFIG_ARM_PMU=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
 # CONFIG_NVMEM is not set
 # CONFIG_STM is not set
