--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -322,6 +322,7 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_ANXIETY=y
@@ -330,6 +331,7 @@ CONFIG_IOSCHED_ANXIETY=y
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_ANXIETY=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
