arm/dts: sdm660_whyded: Fix Typo :/
Signed-off-by: Reinazhard <muh.alfarozy@gmail.com>

--- a/arch/arm/boot/dts/qcom/sdm660_whyded.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660_whyded.dtsi
@@ -132,7 +132,7 @@
 			compatible = "arm,armv8";
 			reg = <0x0 0x3>;
 			enable-method = "psci";
-			qcom,limits-info = <&mitigation_profile0>;'
+			qcom,limits-info = <&mitigation_profile0>;
 			capacity-dmips-mhz = <1024>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			qcom,lmh-dcvs = <&lmh_dcvs0>;
