--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -4184,7 +4184,7 @@ CONFIG_DEVFREQ_GOV_MEMLAT=y
 #
 # DEVFREQ Drivers
 #
-# CONFIG_DEVFREQ_SIMPLE_DEV is not set
+CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_SPDM_SCM=y
 CONFIG_DEVFREQ_SPDM=y
