arm64/configs: rename
Signed-off-by: Reinazhard <muh.alfarozy@gmail.com>

--- a/arch/arm64/configs/whyred_defconfig
+++ b/arch/arm64/configs/whyred_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Extended"
+CONFIG_LOCALVERSION="-SiLonT-ExGon"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_NO_HZ=y
