--- a/arch/arm64/configs/lavender_defconfig
+++ b/arch/arm64/configs/lavender_defconfig
@@ -38,6 +38,8 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_KALLSYMS_ALL is not set
 # CONFIG_MEMBARRIER is not set
 CONFIG_EMBEDDED=y
+CONFIG_LTO=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
